--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/main.js",
     "build": "tsc",
     "start:prod": "npm run build && node dist/main.js",
+    "postinstall": "npm install",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -51,7 +52,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.16.0",
     "@types/react": "^19.0.8",
     "@types/supertest": "^6.0.2",
     "globals": "^15.14.0",
