--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.16.0",
     "@types/react": "^19.0.8",
     "@types/supertest": "^6.0.2",
     "globals": "^15.14.0",
@@ -64,7 +63,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "@types/node": "^20.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
